--- a/scene.yaml
+++ b/scene.yaml
@@ -31,7 +31,7 @@ sources:
         
     california_1672:
         type: GeoJSON
-        url: map.geojson
+        url: isla_california.geojson
         # url: https://xyz.api.here.com/hub/spaces/bgR9NZnE/tile/web/{z}_{x}_{y}
         # url_params:
         #     access_token: AFopW1giI0M4jNmflsU9fn8
